--- a/IFORCE-Sept2018/doc_prefix.tex
+++ b/IFORCE-Sept2018/doc_prefix.tex
@@ -1,7 +1,9 @@
 % Title page
 {
   % Add background image
-  \usebackgroundtemplate{\includegraphics[height=\paperheight,width=\paperwidth]{figs/Background_JRC_Title.png}}
+  \usebackgroundtemplate{%
+  \includegraphics[height=\paperheight,width=\paperwidth]{figs/Background_JRC_Title.png}
+  }
   \setbeamertemplate{navigation symbols}{}
 
   \begin{frame}[plain]
