--- a/IFORCE-Sept2018/doc_suffix.tex
+++ b/IFORCE-Sept2018/doc_suffix.tex
@@ -1,12 +1,13 @@
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 {
+  % Use background image
+  \usebackgroundtemplate{%
+  \includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy.png}
+  }
+  \setbeamertemplate{navigation symbols}{}
   % Remove shadow from block
   \setbeamertemplate{blocks}[rounded][shadow=false]
-  % Use background image
-  \usebackgroundtemplate{\includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy.png}}
-  \setbeamertemplate{navigation symbols}{}
-
   \begin{frame}[plain]
     \begin{block}{}
       \begin{center}
