--- a/IFORCE-Sept2018/doc_prefix.tex
+++ b/IFORCE-Sept2018/doc_prefix.tex
@@ -2,7 +2,7 @@
 {
   % Add background image
   \usebackgroundtemplate{%
-  \includegraphics[height=\paperheight,width=\paperwidth]{figs/Background_JRC_Title.png}
+  \includegraphics[height=\paperheight,width=\paperwidth]{figs/Background_JRC.png}
   }
   \setbeamertemplate{navigation symbols}{}
 
@@ -65,7 +65,7 @@
 
       {\scriptsize
         \begin{tabular}{c}
-          $[1]$ \textbf{JRC} Forest Resources and Climate,
+          $[1]$ \textbf{JRC} D.1 Bio-economy unit,
           $[2]$ Seconded National Expert from \textbf{Cirad}
         \end{tabular}
       }
