--- a/USBIO-Sept2018/USBIO-Sept2018.Rmd
+++ b/USBIO-Sept2018/USBIO-Sept2018.Rmd
@@ -24,250 +24,150 @@ opts_chunk$set(echo=FALSE, cache=FALSE,
 options(knitr.kable.NA="-")
 ```
 
+# Uncertainty and biodiversity scenarios
 
-# Deforestation and demography in Africa
+## Uncertainty in ecological processes
 
-## Model
-
-### Model
-
-\bcols
-\bcol{0.5\textwidth}
-
-- The fate of African tropical forests
-- Associated to demographic explosion
-- Data on deforestation: 
-   1. JRC: 1990-2000-2010
-   2. GFC: 2000-2005-2010-2015
-- $\text{log}D = \beta_0 + \beta_1 \text{log}F + \beta_2 \text{log}P$
-- Projection of forest cover in 2050, 2100
-
-\ecol
-\bcol{0.5\textwidth}
-![](figs/UN-regional-pop-projections.png)
-\ecol
-\ecols
-
-## Results
-
-### Model averaging per country
-
-\centering\includegraphics[height=0.9\textheight]{figs/perc_ctry.png}
-
-### Percentage of forest loss 21st century
-
-\centering\includegraphics[height=0.9\textheight]{figs/Africa_map_forest_loss.png}
-
-## Valorisation
-
-### Valorisation
-
-- Scientific article
-- Integration of Roadless data on deforestation?
-- Use of the results for future deforestation scenario in Africa
-- Predictions in percentage of forest loss: $\sim$ independent of forest definition
-
-# `forestatrisk` Python module
-
-## Functionalities
-
-### `forestatrisk` Python module functionalities
-
-\bcols
-\bcol{0.6\textwidth}
-
-- Spatial probability of deforestation
-- $\text{logit}(\theta_i)=f(\text{spatial factors}_i)+\rho_j$
-- Factors: accessibility (dist. towns, roads, villages), landscape (dist. forest edge), land-tenure (protected areas)
-- $\rho_j$: spatial random effect
-- <https://github.com/ghislainv/forestatrisk>
-
-\ecol
-\bcol{0.4\textwidth}
-
-\centering\includegraphics[width=3cm]{figs/Bayes.jpg}
-
-\centering\includegraphics[width=3cm]{figs/iCAR.png}
-
-\ecol
-\ecols
-
-### Spatial random effects
+### Uncertainty in ecological processes
 
 \bcols
 \bcol{0.5\textwidth}
 
-- Hotspots of deforestation
-- Not explained by the fixed env. factors
+- Scatterplot $y_i$, $x_i$
+- A statistical model $y_i=f(x_i)+\varepsilon_i$, $\varepsilon_i \sim N(0,\sigma^2)$
+- A mean function $y_i=f(x_i)$
+- An uncertainty $\sigma^2$
 
 \ecol
 \bcol{0.5\textwidth}
-\centering\includegraphics[height=0.80\textheight]{figs/rho_orig_ggplot.png}
+![](figs/Scatterplot.png)
 \ecol
 \ecols
 
-### Spatial probability of deforestation
+### Uncertainty propagation and biodiversity scenario
 
-\bcols
-\bcol{0.5\textwidth}
+Propagation:
 
-- Computed at 30 m resolution
-- \textcolor{vertmoyen}{Greener}: lower probability
-- \textcolor{red}{Darker red}: higher probability
+- Several ecological processes with uncertainty
+- Uncertainty propagation (e.g. Monte-Carlo simulations)
 
-\ecol
-\bcol{0.5\textwidth}
-\centering\includegraphics[height=0.80\textheight]{figs/pred_binomial_iCAR.png}
-\ecol
-\ecols
+Biodiversity scenario
 
-### Future forest cover
+- $\Rightarrow$ Biodiversity scenario
+- With (often large) **uncertainty envelope**
 
-\bcols
-\bcol{0.5\textwidth}
+\centering \includegraphics[height=0.5\textheight]{figs/scenario-uncertainty.png}
 
-- \textcolor{vertmoyen}{Green}: residual forest in 2050
-- \textcolor{red}{Red}: deforested area 2010-2050
+## Limitations
 
-\ecol
-\bcol{0.5\textwidth}
-\centering\includegraphics[height=0.8\textheight]{figs/forest_cover_2050.png}
-\ecol
-\ecols
+### Uncertainty is not stochasticity
 
-## Improvements
+- Uncertainty is not necessarily stochasticity
+- Can be associated to **unexplained processes** that can be structured in **space** and **time**
+- Unexplained processes affect the biodiversity scenario
 
-### Improvements
+# Intra-specific variability
+
+## Definition
+
+### Definition of the intra-specific variability
 
 \bcols
 \bcol{0.6\textwidth}
 
-- Python 2.7 and Python 3.x compatible
-- Spatial random effects limited to country border
-- Set of new functions for model validation
-- Can be used from R with `reticulate`
+- All individuals within a species are not equal
+- Genetic $+$ Micro-environment    (e.g. soil, climate)
+- Individual response
 
 \ecol
 \bcol{0.4\textwidth}
-\centering \includegraphics[width=4.5cm]{figs/python-logo.png} \\
-\centering \includegraphics[width=2.5cm]{figs/reticulated_python.png}
+![](figs/Clark2003-growth.png)
+
+\centering Clark et al. 2003, Ecology
 \ecol
 \ecols
 
-## Model performance
+## Examples
 
-### Comparing predictions with GLM
+### Demography
 
-\bcols
-\bcol{0.5\textwidth}
-\includegraphics[height=0.8\textheight]{figs/differences.png}
-\ecol
-\bcol{0.5\textwidth}
-\includegraphics[height=0.4\textheight]{figs/differences_zoom1.png}
+\centering Competition-colonization trade-off
 
-\includegraphics[height=0.4\textheight]{figs/differences_zoom2.png}
-\ecol
-\ecols
+\centering \includegraphics[height=0.7\textheight]{figs/Clark2007-colonization-competition.png}
 
-### Model performance
+\centering Clark et al. 2007 _Ecology Letters_
 
-\centering
+### Allometry
 
-Performance estimated on an independent data-set of 20,000 points
+\centering Height-diameter relationship
 
-```{r perf, echo=FALSE,results="asis"}
-perf <- data.frame(model=c("null","GLM","iCAR","full"),Deviance=NA,OA=NA,Kappa=NA)
-perf$Deviance <- c(0, 8, 30, 100)
-perf$OA <- c(50,62,79,100)
-perf$Kappa <- c(0, 24, 58, 100)
-# Kable
-knitr::kable(perf, format="latex", digits=0, format.args=list(big.mark=","), booktabs=TRUE,
-             caption=NULL, linesep="") %>%
-	kable_styling(latex_options=c("striped"), position="center")
-```
+![](figs/Vieilledent2010-D-H-allometry.png)
 
-### Model validation
+\centering Vieilledent et al. 2010 _Oecologia_
 
-- Map of probability of deforestation in 2010 + known deforested area on 2010-2014
-- Observed vs. projected deforestation on 2010-2014
-- Area deforested in 10 $\times$ 10 km areas
-- Pearson's correlation
+### Functional traits
 
-```{r validation, echo=FALSE,results="asis"}
-val <- data.frame(model=c("GLM","iCAR"),Cor=NA)
-val$Cor<- c(12, 31)
-# Kable
-knitr::kable(val, format="latex", digits=0, format.args=list(big.mark=","), booktabs=TRUE,
-             caption=NULL, linesep="") %>%
-	kable_styling(latex_options=c("striped"), position="center")
-```
+\centering Specific leaf area (SLA)
 
-# Forecasting spatial deforestation spatially
+\centering \includegraphics[height=0.7\textheight]{figs/Albert2011-PPEES-SLA.png}
 
-## Pantropical scale
+\centering Albert et al. 2011 _PPEES_
 
-### Africa
+# Impact on biodiversity scenario
 
-\bcols
-\bcol{0.4\textwidth}
+## Might inverse the scenario
 
-- Map of deforestation probability in 2015
-- Future forest cover in 2050, 2100 
+### Intra-specific var. might inverse the biodiversity scenario
 
-\ecol
-\bcol{0.6\textwidth}
-\includegraphics[width=\textwidth]{figs/prob.png}
-\ecol
-\ecols
+- **RITES** = **R**andom **I**ndividual and **T**emporal **E**ffect**S**
+- Individual effects = intra-specific variability
+- Temporal effects = inter-annual variability (affecting all individuals of one species, e.g. climate, masting effect)
 
-----
+\centering \includegraphics[height=0.5\textwidth]{figs/Clark2007-RITES.png}
 
-![](figs/fcc_35yr.png)
+\centering Clark et al. 2007 _Ecology Letters_
 
-### Asia
+### Structuring variability with RITES
 
-\bcols
-\bcol{0.5\textwidth}
+RITES $\neq$ stochasticity, RITES $=$ structured variability
 
-- 11 countries in tropical Asia
-- Including MMR, THA, KHM, LAO, VNM (ReCaREDD focus countries)
-- Ex. Vietnam in 2050 (half current deforestation rate)
+\centering \includegraphics[height=0.6\textwidth]{figs/Albert2011-PPEES-ITV.png}
 
-\ecol
-\bcol{0.5\textwidth}
-![](figs/fcc_35yr_half_VNM.png)
-\ecol
-\ecols
+\centering Albert et al. 2011 _PPEES_
 
-## Computational challenge
+## Depends on species communities
 
-### Computational challenge
+### Outputs depend on species communities
 
-- Use of Google Cloud Computing ($\neq$ GEE)
-- Cluster of small machines with some cores
-- Parrallelization: one country per machine
+- Results depend on ratio species differences/intra-individual variability
+- If ratio is big enough, no effect on output
+- E.g. silver fir and Norway spruce
 
-![](figs/architecture.png)
+\centering \includegraphics[height=0.5\textwidth]{figs/Vieilledent-These-No-RITES-effects.png}
 
-## Scenario choice
+### Unstable/stable coexistence
 
-### Scenario choice 
+- Species differences $+$ intra-specific variability
+- All possible scenarios: **competitive exclusion** (Gause's law), **unstable coexistence** (neutral theory), **stable coexistence** (niche differenciation)
 
-- "business-as-usual"
-- demographic growth for African country
-- mitigation scenario (50% deforestation)
+\centering \includegraphics[height=0.5\textwidth]{figs/Courbaud2012-TE_couleur.png}
 
-# Perspectives
+\centering Courbaud et al. 2012 _Theoretical Ecology_
 
-### Perspectives
+# Conclusion
 
-1. Deforestation-demography study
-  - consolidate the results
-  - publish a first paper
-2. `forestatrisk` Python module
-  - polish the code
-  - publish a methodological paper advocating our model choice
-3. Pantropical map
-  - re-run computation with new version of the model
-  - extend projections to the pantropical world
-  - produce maps for alternative scenario of intensity
+## Summary
+
+### Summary
+
+- Not all uncertainties are important for biodiversity scenario and decision making (cf. B. Wintle)
+- Structuring uncertainty in space and time can lead to opposite biodiversity scenarios or slow down changes in biodiversity (transient dynamics)
+
+## Additional remark
+
+### Additional remark
+
+- Intra-specific variability and adaptation to change
+
+\centering \includegraphics[height=0.5\textwidth]{figs/niche-breadth.jpg}
+
