--- a/USBIO-Sept2018/header.tex
+++ b/USBIO-Sept2018/header.tex
@@ -25,7 +25,7 @@
 %% Natbib is a popular style for formatting references.
 %\usepackage{natbib} %doesn't work with beamer
 
-\title[Modelling deforestation]{Modelling and forecasting tropical deforestation: advances and perspectives}
+\title[Intra-specific variability]{Uncertainty and intra‐specific variability in models of forest dynamics}
 %\subtitle{} 
 
 \date{}
@@ -49,7 +49,7 @@
 
 % Logo
 \newif\ifplacelogo % create a new conditional
-\logo{\ifplacelogo\includegraphics[width=2.5cm]{figs/Logo-JRC.jpg}\fi} % replace with your own command
+\logo{\ifplacelogo\includegraphics[width=2.5cm]{figs/Logo-Cirad.png}\fi} % replace with your own command
 
 %Call table of contents at the beginning of each section
 \AtBeginSection[]{
