Update access to pdf

--- a/USBIO-Sept2018/doc_suffix.tex
+++ b/USBIO-Sept2018/doc_suffix.tex
@@ -14,5 +14,20 @@
         \ldots~Thank you for attention~\ldots
       \end{center}
     \end{block}
+    \vspace{1cm}
+    \begin{block}{}
+      \begin{center}
+        ghislain.vieilledent@cirad.fr\\
+        @ghislainv\\
+        https://ecology.ghislainv.fr
+      \end{center}
+    \end{block}
+    \vspace{1cm}
+    \begin{block}{}
+      \begin{center}
+				Presentation available at:\\
+				https://ecology.ghislainv.fr/presentations
+      \end{center}
+    \end{block}
   \end{frame}
 }
