--- a/USBIO-Sept2018/doc_suffix.tex
+++ b/USBIO-Sept2018/doc_suffix.tex
@@ -26,7 +26,7 @@
     \begin{block}{}
       \begin{center}
 				Presentation available at:\\
-				https://ecology.ghislainv.fr/presentations
+				\url{https://ecology.ghislainv.fr/presentations}
       \end{center}
     \end{block}
   \end{frame}
