--- a/COS_FRB_Dec2018/doc_suffix.tex
+++ b/COS_FRB_Dec2018/doc_suffix.tex
@@ -11,7 +11,7 @@
   \begin{frame}[plain]
     \begin{block}{}
       \begin{center}
-        \ldots~Merci pour votre attention~\ldots
+        \ldots~Merci pour votre attention~\ldots \\
         \url{https://ecology.ghislainv.fr/presentations}
       \end{center}
     \end{block}
