--- a/COS_FRB_Dec2018/doc_suffix.tex
+++ b/COS_FRB_Dec2018/doc_suffix.tex
@@ -3,17 +3,25 @@
 {
   % Use background image
   \usebackgroundtemplate{%
-    \includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy.png}
+    \includegraphics[height=\paperheight,width=\paperwidth]{figs/Remerciements_Paysage.png}
   }
   \setbeamertemplate{navigation symbols}{}
   % Remove shadow from block
   \setbeamertemplate{blocks}[rounded][shadow=false]
   \begin{frame}[plain]
+  \bcols
+  \bcol{0.75cm}
+    ~
+  \ecol
+  \bcol{9.25cm}
+  	\vspace{5cm}
     \begin{block}{}
       \begin{center}
         \ldots~Merci pour votre attention~\ldots \\
         \url{https://ecology.ghislainv.fr/presentations}
       \end{center}
     \end{block}
+  \ecol
+  \ecols
   \end{frame}
 }
