--- a/COS_FRB_Dec2018/doc_prefix.tex
+++ b/COS_FRB_Dec2018/doc_prefix.tex
@@ -58,7 +58,7 @@
 
 \placelogotrue
 \begin{frame}
-  \framesubtitle{Outline}
+  \frametitle{Plan}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
       \tableofcontents[sections={1-2}]
