--- a/COS_FRB_Dec2018/header.tex
+++ b/COS_FRB_Dec2018/header.tex
@@ -9,7 +9,8 @@
 %\usepackage{hyperref}
 \usepackage[english,francais]{babel}
 \definecolor{vertmoyen}{RGB}{51,110,23} % vert moyen
-\usecolortheme[named=vertmoyen]{structure}
+\definecolor{blueFRB}{HTML}{31859c}
+\usecolortheme[named=blueFRB]{structure}
 \usepackage{tabularx} % varier la largeur du tableau
 \usepackage{layout}
 \usepackage{longtable}
@@ -41,6 +42,13 @@
 % \usetheme{Singapore}
 % \usetheme{Antibes}
 \useinnertheme{rounded} %% bullets
+%\setbeamertemplate{footline}[frame number]
+\setbeamertemplate{frametitle}{%
+    \usebeamerfont{frametitle}\insertframetitle%
+    \vphantom{g} % To avoid fluctuations per frame
+    \par
+    \centering \includegraphics[width=\textwidth]{figs/Barre_couleur}
+}
 
 % Ignore ignorenonframetext class option in default template
 \makeatletter
@@ -49,13 +57,13 @@
 
 % Logo
 \newif\ifplacelogo % create a new conditional
-\logo{\ifplacelogo\includegraphics[width=2.5cm]{figs/Logo-Cirad.png}\fi} % replace with your own command
+\logo{\ifplacelogo\includegraphics[width=\textwidth]{figs/Membres-FRB}\fi} % replace with your own command
 
 %Call table of contents at the beginning of each section
 \AtBeginSection[]{
 \placelogotrue
   \begin{frame}
-    \framesubtitle{Plan}
+    \frametitle{Plan}
     \begin{columns}[c]
       \begin{column}{0.5\textwidth}
         \tableofcontents[sections={1-2},currentsection]
@@ -68,19 +76,23 @@
 \placelogofalse
 }
 
-\AtBeginSubsection[]{
-  \begin{frame}
-    \framesubtitle{Plan}
-    \begin{columns}[c]
-      \begin{column}{0.5\textwidth}
-        \tableofcontents[sections={1-2},currentsection,currentsubsection]
-      \end{column}
-      \begin{column}{0.5\textwidth}
-        \tableofcontents[sections={3-4},currentsection,currentsubsection]
-      \end{column}
-    \end{columns}
-  \end{frame}
-}
+\AtBeginSubsection[]{}
+
+% \AtBeginSubsection[]{
+% \placelogotrue
+%   \begin{frame}
+%     \frametitle{Plan}
+%     \begin{columns}[c]
+%       \begin{column}{0.5\textwidth}
+%         \tableofcontents[sections={1-2},currentsection,currentsubsection]
+%       \end{column}
+%       \begin{column}{0.5\textwidth}
+%         \tableofcontents[sections={3-4},currentsection,currentsubsection]
+%       \end{column}
+%     \end{columns}
+%   \end{frame}
+% \placelogofalse  
+% }
 
 % Two-columns slides
 \def\bcols{\begin{columns}}
