--- a/useR2019-July2019/doc_suffix.tex
+++ b/useR2019-July2019/doc_suffix.tex
@@ -3,30 +3,31 @@
 {
   % Use background image
   \usebackgroundtemplate{%
-  \includegraphics[height=0.85\paperheight,width=\paperwidth]{figs/foret.jpg}
+  \includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy.png}
   }
   \setbeamertemplate{navigation symbols}{}
   % Remove shadow from block
   \setbeamertemplate{blocks}[rounded][shadow=false]
-  
-  \begin{frame}[plain, noframenumbering]
-      \vspace{0.5cm}
+  \begin{frame}[plain]
+    % \begin{block}{}
+    %   \begin{center}
+    %     \ldots~Merci pour votre attention~\ldots
+    %   \end{center}
+    % \end{block}
+    % \vspace{1cm}
+    \vspace*{\stretch{100}} 
     \begin{block}{}
       \begin{center}
-        \ldots~Merci pour votre attention~\ldots \\
+        \ldots~Thank you for attention~\ldots\\
         \url{https://ecology.ghislainv.fr/jSDM}
       \end{center}
     \end{block}
-    \vspace{6.2cm}
-
-    \begin{center}     
-    \begin{tabular}{C{2cm}C{2cm}C{5cm}}
-        \includegraphics[height=0.7cm]{figs/Logo-Cirad.png} &
-        \includegraphics[height=1cm, width=1cm]{figs/logo-AMAP.png} 
-        \includegraphics[height=0.8cm]{figs/titre-long.png} &
-        ~
-      \end{tabular}
-    \end{center}
-
+%     \vspace{1cm}
+%     \begin{block}{}
+%       \begin{center}
+% 				Presentation available at:\\
+% 				\url{https://ecology.ghislainv.fr/presentations}
+%       \end{center}
+%     \end{block}
   \end{frame}
 }
