--- a/useR2019-July2019/header.tex
+++ b/useR2019-July2019/header.tex
@@ -13,7 +13,7 @@
 \usepackage[english,francais]{babel}
 \definecolor{vertmoyen}{RGB}{51,110,23} % vert moyen
 \definecolor{blueFRB}{HTML}{31859c}
-\usecolortheme[named=blueFRB]{structure}
+\usecolortheme[named=vertmoyen]{structure}
 \usepackage{tabularx} % varier la largeur du tableau
 \usepackage{layout}
 \usepackage{longtable}
@@ -29,7 +29,7 @@
 %% Natbib is a popular style for formatting references.
 %\usepackage{natbib} %doesn't work with beamer
 
-\title[Using Rcpp* packages for easy and fast Gibbs sampling MCMC from within R]{\textbf{Using Rcpp* packages for easy and fast Gibbs sampling MCMC from within R}}
+\title[Rcpp* for MCMC in R]{\textbf{Using Rcpp* packages for easy and fast Gibbs sampling MCMC from within R}}
 %\subtitle{} 
 
 \date{}
@@ -37,21 +37,15 @@
 % Theme
 % \usetheme{AnnArbor}
 % \usetheme{Dresden}
- \usetheme{Copenhagen}
+% \usetheme{Copenhagen}
 % \usetheme{Frankfurt}
 % \usetheme{Berlin}
 % \usetheme{Madrid}
-%\usetheme{Montpellier}
+% \usetheme{Montpellier}
 % \usetheme{Singapore}
 % \usetheme{Antibes}
 \useinnertheme{rounded} %% bullets
 \setbeamertemplate{footline}[frame number]
-% \setbeamertemplate{frametitle}{%
-%     \usebeamerfont{frametitle}\insertframetitle%
-%     \vphantom{g} % To avoid fluctuations per frame
-%     \par
-%     \centering \includegraphics[width=\textwidth]{figs/Barre_couleur}
-% }
 
 % Ignore ignorenonframetext class option in default template
 \makeatletter
@@ -60,19 +54,32 @@
 
 % Logo
 \newif\ifplacelogo % create a new conditional
-\logo{\ifplacelogo    \begin{tabular}{C{2cm}C{2cm}C{5cm}}
-        \includegraphics[height=0.7cm]{figs/Logo-Cirad.png} &
-        \includegraphics[height=1cm, width=1cm]{figs/logo-AMAP.png} 
-        \includegraphics[height=0.8cm]{figs/titre-long.png} &
-        ~
-      \end{tabular}\fi} % replace with your own command
+\logo{
+  \ifplacelogo
+    \begin{tabular}{C{2cm}C{2cm}C{5cm}}
+      \includegraphics[height=0.7cm]{figs/logo_Cirad.png} &
+      \includegraphics[height=1cm]{figs/logo_AMAP.png} 
+      \includegraphics[height=0.8cm]{figs/AMAP-titre-long.png} &
+      ~
+    \end{tabular}
+  \fi
+} % replace with your own command
 
 %Call table of contents at the beginning of each section
 \AtBeginSection[]{
 \placelogotrue
   \begin{frame}
-    \frametitle{Plan}
-    \tableofcontents[currentsection, hideothersubsections, sectionstyle=show/hide]
+    \frametitle{Outline}
+    \begin{columns}[c]
+      \begin{column}{0.5\textwidth}
+        \tableofcontents[sections=1, currentsection]
+        \vspace{0.5cm}
+        \tableofcontents[sections=2, currentsection]
+      \end{column}
+      \begin{column}{0.5\textwidth}
+        \tableofcontents[sections=3, currentsection]
+      \end{column}
+    \end{columns}
   \end{frame}
 \placelogofalse
 }
@@ -95,57 +102,18 @@
 % \placelogofalse
 % }
 
-
 % Two-columns slides
 \def\bcols{\begin{columns}}
 \def\bcol{\begin{column}}
 \def\ecol{\end{column}}
 \def\ecols{\end{columns}}
 
-% C++ code display
-\definecolor{Darkgreen}{rgb}{0,0.4,0}
-\definecolor{listinggray}{gray}{0.9}
-\definecolor{lbcolor}{rgb}{0.9,0.9,0.9}
-\lstset{
-backgroundcolor=\color{lbcolor},
-    tabsize=4,    
-%   rulecolor=,
-    language=[GNU]C++,
-        basicstyle=\footnotesize,
-        upquote=true,
-        aboveskip={0.0\baselineskip},
-        columns=fixed,
-        showstringspaces=false,
-        extendedchars=false,
-        breaklines=true,
-        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-        frame=single,
-        numbers=left,
-        showtabs=false,
-        showspaces=false,
-        showstringspaces=false,
-        identifierstyle=\ttfamily,
-        keywordstyle=\color[rgb]{0,0,1},
-        commentstyle=\color[rgb]{0.026,0.112,0.095},
-        stringstyle=\color[rgb]{0.627,0.126,0.941},
-        numberstyle=\color[rgb]{0.205, 0.142, 0.73},
-%        \lstdefinestyle{C++}{language=C++,style=numbers}’.
-}
-\lstset{
-    backgroundcolor=\color{lbcolor},
-    tabsize=4,
-  language=C++,
-  captionpos=b,
-  tabsize=3,
-  frame=lines,
-  numbers=left,
-  numberstyle=\tiny,
-  numbersep=5pt,
-  breaklines=true,
-  showstringspaces=false,
-  basicstyle=\footnotesize,
-%  identifierstyle=\color{magenta},
-  keywordstyle=\color[rgb]{0,0,1},
-  commentstyle=\color{Darkgreen},
-  stringstyle=\color{red}
-  }
+% Change fontsize of R code
+\let\oldShaded\Shaded
+\let\endoldShaded\endShaded
+\renewenvironment{Shaded}{\footnotesize\oldShaded}{\endoldShaded}
+
+% Change fontsize of output
+\let\oldverbatim\verbatim
+\let\endoldverbatim\endverbatim
+\renewenvironment{verbatim}{\footnotesize\oldverbatim}{\endoldverbatim}
