--- a/useR2019-July2019/doc_prefix.tex
+++ b/useR2019-July2019/doc_prefix.tex
@@ -1,5 +1,3 @@
-
-
 % Title page
 {
   \setbeamertemplate{navigation symbols}{}
@@ -17,26 +15,26 @@
     \end{center}
     \begin{center}
 
-      {\footnotesize
+      %{\small
         \begin{tabular}{c}
-          Ghislain Vieilledent and 
-          Jeanne Clément
+          Ghislain VIEILLEDENT and 
+          Jeanne CLEMENT
         \end{tabular}
-      }
+      %}
 
       \vspace{0.25cm}
 
-      {\footnotesize
+      %{\small
         \begin{tabular}{c}
-          \textbf{Cirad} -- UMR AMAP 
+          \textbf{Cirad}, UMR AMAP, Montpellier, FRANCE 
         \end{tabular}
-      }
+      %}
 
       \vspace{0.25cm}
 
       \begin{tabular}{C{2cm}C{2cm}C{3cm}}
-        \includegraphics[height=0.7cm]{figs/Logo-Cirad.png} &
-        \includegraphics[height=1cm, width=1cm]{figs/logo-AMAP.png} 
+        \includegraphics[height=0.7cm]{figs/logo_Cirad.png} &
+        \includegraphics[height=1cm]{figs/logo_AMAP.png} 
         \includegraphics[height=0.8cm]{figs/AMAP-titre-long.png} &
         ~
       \end{tabular}
@@ -48,14 +46,19 @@
 \setcounter{framenumber}{0}
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
+
+\placelogotrue
 \begin{frame}
-  \frametitle{Plan}
+  \frametitle{Outline}
   \begin{columns}[c]
     \begin{column}{0.5\textwidth}
-      \tableofcontents[sections={1-2}]
+      \tableofcontents[sections=1]
+      \vspace{0.5cm}
+      \tableofcontents[sections=2]
     \end{column}
     \begin{column}{0.5\textwidth}
-      \tableofcontents[sections={3-4}]
+      \tableofcontents[sections=3]
     \end{column}
   \end{columns}
 \end{frame}
+\placelogofalse
